# autify-web-scraper

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
autifycli/: cmd.py  exceptions.py  logger.py  version.py
autifycli/domain/entities/: metadata.py
autifycli/domain/services/: fetch_service.py
autifycli/domain/utils/: __init__.py
tests/: cmd_test.py
tests/domain/entities/: metadata_test.py
tests/domain/services/: fetch_service_test.py
tests/domain/utils/: utils_test.py
