[tool.poetry]
name = "autifycli"
version = "0.1.0"
description = "Web Scraper for Autify coding challenge."
authors = ["keigohtr <keigoht@gmail.com>"]
license = "Apache-2.0"
packages = [
    { include = "autifycli" }
]

[tool.poetry.scripts]
autify = "autifycli.cmd:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
click = "^8.0.1"
retrying = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
autoflake = "^1.4"
types-pkg-resources = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length=120

[tool.black]
line-length = 120
